--- a/Demo1/jump.html
+++ b/Demo1/jump.html
@@ -8,6 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
+<link rel="stylesheet" href="./../res/global.css" type="text/css" media="screen" />
 <link rel = "Shortcut Icon" href="http://microdemo.bihe0832.com/res/images/zixie_32.ico">
 <script type="text/javascript" src="./../res/brower.js" charset="UTF-8"></script>
 <script type="text/javascript">
