在项目主页增加github地址

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <li>
             后续可以考虑帮用户完成生成二维码的步骤，用户只需要提供不同平台下的下载链接即可跳转到对应的链接。
         </li>
+        <li>
+            对应github源码地址：<a href="https://github.com/bihe0832/MultiQrcode">https://github.com/bihe0832/MultiQrcode</a>
+        </li>
     </ul>
     </p>
  <div>
