增加代码统计

--- a/Demo1/jump.html
+++ b/Demo1/jump.html
@@ -57,5 +57,6 @@ window.onload = function(){
 </head>
 <body>
  <h1>逻辑处理页</h1>
-</body>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ </body>
 </html>
