--- a/Demo1/unknow.html
+++ b/Demo1/unknow.html
@@ -23,5 +23,6 @@ window.onload = function(){
  <ul>
     <li><span id="result"></span></li>
  </ul>
-</body>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ </body>
 </html>
