--- a/Demo1/winPhone.html
+++ b/Demo1/winPhone.html
@@ -13,5 +13,6 @@
 </head>
 <body>
  <h1>你当前打开的是windows phone对应的界面。</h1>
-</body>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ </body>
 </html>
