--- a/Demo2/download.html
+++ b/Demo2/download.html
@@ -50,5 +50,6 @@ window.onload = function(){
 <body>
  <h1>逻辑处理页</h1>
  <span id="tips"></span>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
 </body>
 </html>
