--- a/Demo2/pcShow.html
+++ b/Demo2/pcShow.html
@@ -14,5 +14,6 @@
 <body>
  <h1>感谢您关注XXX应用，请扫描下面的二维码下载应用。</h1>
  <img style="text-align:center" src="./../res/demo2_qrcode.png" width="250px"/><BR>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
 </body>
 </html>
