--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
       二维码对应地址：<a href="http://microdemo.bihe0832.com/MultiQrcode/Demo2/download.html">http://microdemo.bihe0832.com/MultiQrcode/Demo2/download.html</a>。
     <p><span>	说明：</span>Demo2提供了常见应用下载的二维码的方式中，提供一个二维码支持各种平台下载。 </p>
  </div>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
 </body>
 </html>
