--- a/tools.html
+++ b/tools.html
@@ -39,5 +39,6 @@ window.onload = function(){
     <li>访问设备操作系统：<span id="os"></span></li>
     <li>访问设备是否来源于超级app：<span id="isApp"></span></li>
  </ul>
+ <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
 </body>
 </html>
