--- a/Demo2/pcShow.html
+++ b/Demo2/pcShow.html
@@ -14,6 +14,17 @@
 <body>
  <h1>感谢您关注XXX应用，请扫描下面的二维码下载应用。</h1>
  <img style="text-align:center" src="./../res/demo2_qrcode.png" width="250px"/><BR>
-<script type="text/javascript" src="https://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ <script type="text/javascript" charset="UTF-8">
+    var _mtac = {};
+    (function() {
+      var mta = document.createElement("script");
+      mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+      mta.setAttribute("name", "MTAH5");
+      mta.setAttribute("sid", "500724774");
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(mta, s);
+    })();
+</script>
+
 </body>
 </html>
