--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
       二维码对应地址：<a href="http://microdemo.bihe0832.com/MultiQrcode/Demo2/download.html">http://microdemo.bihe0832.com/MultiQrcode/Demo2/download.html</a>。
     <p><span>	说明：</span>Demo2提供了常见应用下载的二维码的方式中，提供一个二维码支持各种平台下载。 </p>
  </div>
- <script type="text/javascript" src="https://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ <script type="text/javascript" charset="UTF-8">
+    var _mtac = {};
+    (function() {
+      var mta = document.createElement("script");
+      mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+      mta.setAttribute("name", "MTAH5");
+      mta.setAttribute("sid", "500724774");
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(mta, s);
+    })();
+</script>
 </body>
 </html>
