--- a/tools.html
+++ b/tools.html
@@ -39,6 +39,16 @@ window.onload = function(){
     <li>访问设备操作系统：<span id="os"></span></li>
     <li>访问设备是否来源于超级app：<span id="isApp"></span></li>
  </ul>
- <script type="text/javascript" src="https://tajs.qq.com/stats?sId=37805902" charset="UTF-8"></script>
+ <script type="text/javascript" charset="UTF-8">
+  var _mtac = {};
+  (function() {
+    var mta = document.createElement("script");
+    mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+    mta.setAttribute("name", "MTAH5");
+    mta.setAttribute("sid", "500724774");
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(mta, s);
+  })();
+</script>
 </body>
 </html>
