--- a/Demo1/jump.html
+++ b/Demo1/jump.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
 <link rel="stylesheet" href="./../res/global.css" type="text/css" media="screen" />
-<link rel = "Shortcut Icon" href="https://microdemo.bihe0832.com/res/images/zixie_32.ico">
+<link rel = "Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico">
 <script type="text/javascript" src="./../res/brower.js" charset="UTF-8"></script>
 <script type="text/javascript">
 window.onload = function(){
