--- a/Demo2/pcShow.html
+++ b/Demo2/pcShow.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
 <link rel="stylesheet" href="./../res/global.css" type="text/css" media="screen" />
-<link rel = "Shortcut Icon" href="https://microdemo.bihe0832.com/res/images/zixie_32.ico">
+<link rel = "Shortcut Icon" href="https://cdn.bihe0832.com/images/zixie_32.ico">
 </head>
 <body>
  <h1>感谢您关注XXX应用，请扫描下面的二维码下载应用。</h1>
